<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    tools:context="com.oswald.android.helloandroid.HelloAndroid">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:elevation="10dp"
            android:src="@mipmap/interior_2"
            app:civ_border_color="#75000000"
            app:civ_border_overlay="true"
            app:civ_border_width="4dp" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_image"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:src="@drawable/logo_tekst" />

        <LinearLayout
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:orientation="vertical">

            <TextView
                android:id="@+id/place"
                style='@style/infoTextLayout'
                android:autoLink="map"
                android:background="#30000000"
                android:drawableLeft="@drawable/ic_place"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_place"
                android:onClick="maps"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:text="@string/address"
                android:textColorLink="@android:color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ffffff" />

            <TextView
                android:id="@+id/Phone"
                style='@style/infoTextLayout'
                android:autoLink="phone"
                android:background="#20000000"
                android:drawableLeft="@drawable/phone"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/phone"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:text="@string/phone"
                android:textColorLink="@android:color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ffffff" />

            <TextView
                android:id="@+id/site"
                style="@style/infoTextLayout"
                android:autoLink="web"
                android:background="#20000000"
                android:drawableLeft="@drawable/ic_home"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_home"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:text="@string/site"
                android:textColorLink="@android:color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ffffff" />

            <TextView
                android:id="@+id/opening_hours"
                style="@style/infoTextLayout"
                android:background="#20000000"
                android:drawableLeft="@drawable/ic_query_builder"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_query_builder"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:text="@string/opening_hours" />

        </LinearLayout>

        <Button
            style="@style/buttonLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/info"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:onClick="contactUs"
            android:text="@string/contact_button" />
    </RelativeLayout>
</ScrollView>
